# c-studies

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/c_studies_lib/: hello.h  reader.h
scripts/: build.sh  debug.sh  run.sh  test.sh
src/app/: main.c
src/c_studies_app/: main.c
src/c_studies_lib/: hello.c  reader.c
tests/: file-read-test.txt
tests/c_studies_lib/: hello_test.cpp  reader_test.cpp
